[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Matthew White <mwhite@plex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
daggy = "0.7.0"
petgraph = "0.5.1"
